--- a/MVC5Course/Web.config
+++ b/MVC5Course/Web.config
@@ -7,7 +7,8 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MVC5Course-20150418020959.mdf;Initial Catalog=aspnet-MVC5Course-20150418020959;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="FabricsEntities" connectionString="metadata=res://*/Models.Fabrics.csdl|res://*/Models.Fabrics.ssdl|res://*/Models.Fabrics.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Fabrics.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -30,6 +31,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="On"></customErrors>
   </system.web>
   <system.webServer>
     <modules>
